tests/typing/fail/type-mismatch-03.stderr
error: type mismatch: expected `bool`, found `int`
 --> tests/typing/fail/type-mismatch-03.rs:8:28
  |
8 |         a : int = false -> !(pre a);
  |                            ^^^^^^^^
